# stream-prism

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SPECS.md
.github/workflows/: docker.yml  release.yml
examples/: debug_resolve.rs
providers/: bilibili.yaml  youtube.yaml
schemas/: provider.schema.json
src/: config.rs  lib.rs  main.rs  mapper.rs  model.rs  provider.rs  routes.rs
src/formatter/: m3u.rs  mod.rs  rss.rs
tests/: routing_tests.rs
