[package]
name = "stream-prism"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7"
serde_yaml = "0.9"

reqwest = { version = "0.12", features = ["json"] }
rss = "2.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
chrono = { version = "0.4", features = ["std"] }
urlencoding = "2.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
enum_glob_use = "deny"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"


